--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -89,6 +89,8 @@ Platform
 {% endif %}
 
 
+{{ course.accessibility_support | inspect }}
+
 {{ aSupport | inspect }}
 
 {{ course.topics | inspect }}
