--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -1,6 +1,9 @@
 {%- assign filteredItems = "" | split: "," -%}
 {%- assign aGroups = site.data.accessibility-support | map: "options" -%}
 
+
+{{ aGroups | inspect }}
+
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
         {% if include.data contains aSupport.id %}
@@ -22,4 +25,3 @@
         {%- endfor -%}
     {%- endfor -%}
 {%- endfor -%}
-{{ include.data | inspect }}
