--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -2,7 +2,7 @@
 {%- assign aGroups = site.data.accessibility-support | map: "options" -%}
 
 
-{{ aGroups | inspect }}
+
 
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
@@ -25,3 +25,5 @@
         {%- endfor -%}
     {%- endfor -%}
 {%- endfor -%}
+
+{{ filteredItems | inspect }}
