--- a/_includes/filtered-accessibility-support.liquid
+++ b/_includes/filtered-accessibility-support.liquid
@@ -7,6 +7,7 @@
 {%- for aSubGroup in aGroups -%}
     {%- for aSupport in aSubGroup -%}
         {% if include.data contains aSupport.id %}
+            {{ include.data | inspect }}
             {% assign aSupportAux = "" | split: "," %}
             {% assign aSupportAux = aSupportAux | push: aSupport.id %}
             {% assign aSupportAux = aSupportAux | push: aSupport.name %}
@@ -26,4 +27,4 @@
     {%- endfor -%}
 {%- endfor -%}
 
-{{ filteredItems | inspect }}
+{{ filteredItems }}
