--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -105,8 +105,8 @@ Cost
 : {{ course.cost}}
 
 Availability
-: From {{ course.start_date | date: "%y %b, %d" }}{% if course.end_date %}
-{% if course.end_date %} to {{ course.end_date | date: "%y %b, %d" }}{% endif %}{% endif %}
+: From {{ course.start_date | date: "-%d %B %Y" }}{% if course.end_date %}
+{% if course.end_date %} to {{ course.end_date | date: "-%d %B %Y" }}{% endif %}{% endif %}
 
 Website
 : <a href="{{ course.website}}" rel="external">{{ course.website }}</a>
@@ -118,9 +118,9 @@ Reviews page
 : Not provided
 {% endif %}
 
-This information was last updated on {{ course.info_last_updated | date: "%d, %b %y" }}.
+This information was last updated on {{ course.info_last_updated | date: "-%d %B %Y" }}.
 {% if course.content_last_updated %}
-The content of this resource was last updated on {{ course.content_last_updated | date: "%d, %b %y" }}.
+The content of this resource was last updated on {{ course.content_last_updated | date: "-%d %B %Y" }}.
 {% endif %}
 {% include excol.html type="end" %}
 {% include box.html type="end" %}
