--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -321,3 +321,12 @@ fieldset label:hover a:hover {
 img.icon {
   --img-width: 15px;
 }
+
+#helper div {
+  background-color: var(--cloudy-subtle);
+  padding:0.5em;
+  margin: 0.5em;
+  font-weight: normal;
+  border: solid 1px var(--line-grey);
+  margin-left:-2em;
+}
