--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -320,14 +320,14 @@ fieldset label:hover a:hover {
 
 img.icon {
   --img-width: 15px;
+  cursor: pointer;
 }
 
 .helper{
   background-color: var(--cloudy-subtle);
   padding:0.5em;
-  margin: 0.5em;
   font-weight: normal;
   border: solid 1px var(--line-grey);
-  margin-left:-2em;
+  margin-right:2em;
   width:100%;
 }
