--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -330,8 +330,9 @@ img.icon {
   border: transparent;
 }
 
-.icon:focus {
+.icon:focus, .icon:hover {
   background: transparent;
+  border:transparent;
 }
 
 
