--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,27 +1,13 @@
 {%- assign filteredItems = "" | split: "," -%}
-{%- assign modules = site.data.wai-curricula | map: "modules" -%}
+{%- assign curricula = site.data.wai-curricula | map: "modules" -%}
 
 {{ include.data }}
-{{ modules | inspect }}
+{{ curricula | inspect }}
 
-{%- for aSubGroup in aGroups -%}
-    {%- for aSupport in aSubGroup -%}
-        {% if include.data contains aSupport.id %}
-            {% assign aSupportAux = "" | split: "," %}
-            {% assign aSupportAux = aSupportAux | push: aSupport.id %}
-            {% assign aSupportAux = aSupportAux | push: aSupport.name %}
-            {% assign filteredItems  = filteredItems | push: aSupportAux %}
-        {% endif %}
-        {%- assign newASubGroups = aSupport | map: "options" -%}
-        {%- for newASubGroup in newASubGroups -%}
-            {%- for newASupport in newASubGroup -%}
-                {% if include.data contains newASupport.id %}
-                    {% assign aSupportAux = "" | split: "," %}
-                    {% assign aSupportAux = aSupportAux | push: newASupport.id %}
-                    {% assign aSupportAux = aSupportAux | push: newASupport.name %}
-                    {% assign filteredItems  = filteredItems | push: aSupportAux %}
-                {% endif %}
-            {%- endfor -%}
-        {%- endfor -%}
+{%- for modules in curricula -%}
+    {%- for module in modules -%}
+        {%- if include.data contains module.id -%}
+            {{ module.name }}
+        {%- endif -%}
     {%- endfor -%}
 {%- endfor -%}
