--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,5 +1,8 @@
 {%- assign filteredItems = "" | split: "," -%}
 
+{{ include.data | inspect }}
+
+
 {%- for curricula in site.data.wai-curricula -%}
     {%- for modules in curricula.modules -%}
         {%- if include.data contains modules.id -%}
