--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -40,16 +40,13 @@ Topics
 * {{ topic }}{% endfor %}
 
 {% include filtered-wai-curricula.liquid data = course.wai_curricula %}
-<details class="helper">
-<summary>
-WAI Curricula module: {% include image.html src="info.svg" alt="alternative text" class="icon" %}
-</summary>
+WAI Curricula module: <details class="helper"><summary>{% include image.html src="info.svg" alt="alternative text" class="icon" %}</summary>
 {% assign helper = site.data.helpers | where: "id", "wai-curricula" %}
 <div>{{ helper[0].description }}</div>
 </details>
 {% if course.wai_curricula %}
 {% for module in filteredItems %}
-{{module[0]}} - {{module[1]}}
+* {{module[0]}} - {{module[1]}}
 {% endfor %}
 {% else %} Not provided {% endif %}
 
