--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -48,8 +48,11 @@ WAI Curricula module: {% include image.html src="info.svg" alt="alternative text
 <div>{{ helper[0].description }}</div>
 </details>
 {% if course.wai_curricula %}
-{% for module in filteredItems %}
-* {{module[0]}} - <a href="{{module[2]}}" rel="external">{{module[1]}}</a>
+{% for modules in filteredItems %}
+* {{modules[0]}}
+{% for module in modules[1] %}
+ *{{modulep[0]}}
+ {% endfor %}
 {% endfor %}
 {% else %} Not provided {% endif %}
 
