--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -49,10 +49,7 @@ WAI Curricula module: {% include image.html src="info.svg" alt="alternative text
 </details>
 {% if course.wai_curricula %}
 {% for modules in filteredItems %}
-* {{modules[0]}}
-{% for module in modules[1] %}
- * {{ module | inspect }}
- {% endfor %}
+{{ modules | inspect }}
 {% endfor %}
 {% else %} Not provided {% endif %}
 
