--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -50,9 +50,8 @@ WAI Curricula module: {% include image.html src="info.svg" alt="alternative text
 {% if course.wai_curricula %}
 {% for modules in filteredItems %}
 * {{ modules[0] }}
-{{ modules | inspect }}
 {% for module in modules[1] %}
-{{ module1 | inspect }}
+{{ module | inspect }}
 {% endfor %}
 {% endfor %}
 {% else %} Not provided {% endif %}
