--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -49,10 +49,9 @@ WAI Curricula module: {% include image.html src="info.svg" alt="alternative text
 </details>
 {% if course.wai_curricula %}
 {% for modules in filteredItems %}
-* {{ modules[0] }}
-{{ modules | inspect }}
+{{ modules[0] | inspect }}
+{{ modules[1] | inspect }}
 {% for module in modules[1] %}
-{{ module | inspect }}
 {% endfor %}
 {% endfor %}
 {% else %} Not provided {% endif %}
