--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -11,7 +11,7 @@
             {%- assign auxModules = auxModules | push: modules.link -%}
             {%- assign auxModules  = auxModules | push: auxModules -%}
         {%- endif -%}
-        {%- assign auxCurricula  = auxCurricula | push: auxCurricula -%}
+        {%- assign auxCurricula  = auxCurricula | push: auxModules -%}
     {%- endfor -%}
     {% if auxModules%}
         {%- assign filteredItems  = filteredItems | push: auxCurricula -%}
