--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -40,6 +40,7 @@ Topics
 * {{ topic }}{% endfor %}
 
 {% include filtered-wai-curricula.liquid data = course.wai_curricula %}
+{{ filteredItems | inspect }}
 <details class="helper">
 <summary>
 WAI Curricula module: {% include image.html src="info.svg" alt="alternative text" class="icon" %}
@@ -51,7 +52,7 @@ WAI Curricula module: {% include image.html src="info.svg" alt="alternative text
 {% for modules in filteredItems %}
 * {{ modules[0] }}
 {% for module in modules[1] %}
-<a href="{{ module[2]}}" rel="external"></a>{{ module[0] }}</a>
+<a href="{{ module[2]}}" rel="external">{{ module[0] }}</a>
 {% endfor %}
 {% endfor %}
 {% else %} Not provided {% endif %}
