--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,24 +1,1 @@
-// lista de id
-// include.data
-
-
-{%- assign filteredItems = "" | split: "," -%}
-{%- for curricula in site.data.wai-curricula -%}
-
-    // dev modules
-    {%- assign modulesAux = "" | split: "," -%}
-    {%- assign modulesAux = modulesAux | push: curricula.name -%}
-
-    {%- for module in curricula.modules -%}
-        {% if include.data contains module.id %}
-            {{ module.name }}
-        {% endif %}    
-    
-    {%- endfor -%}
-
-
-
-{%- endfor -%}
-
-
-
+{{ site.data.wai-curricula | where: "modules.id" = "developer_modules2" }}
