--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,1 +1,1 @@
-{{ site.data.wai-curricula | where: "modules.id" = "developer_modules2" }}
+{{ site.data.wai-curricula | where: "modules.id", "developer_modules2" }}
